--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <meta name="description" content="Views, ton magazine préféré" />
+    <meta name="description" content="The Views, ton magazine préféré" />
     <title>Rayan Adamczak</title>
   </head>
 
@@ -18,13 +18,13 @@
       <a aria-label="English language" href="https://siteenanglais.com">FR/EN</a>
     </header>
 
-    <main itemscope itemtype="http://schema.org/MusicGroup">
+    <main>
       <article itemscope itemtype="http://schema.org/Organization">
         <h2>
           <span itemprop="performer">Kanye West</span> a refusé de se produire à
           Coachella car il ne pouvait pas construire de dôme géant
         </h2>
-        <img src="img/kanyedrake.jpg" alt="Kanye"/>
+        <img src="img/kanyewest.jpg" alt="Kanye"/>
         <p>
           Il y a quelques jours, nous apprenions que Kanye West était prévu
           comme headliner de l’édition 2019 de Coachella. Malheureusement pour
@@ -69,14 +69,14 @@
           Yeezy et cet imbroglio surréaliste déjà oublié par l’organisation de
           Coachella.
         </p>
-      </article itemscope itemtype="http://schema.org/Organization">
+      </article>
       <form>
         <label for="comment">Votre commentaire :</label><br />
-        <input type="text" name="comment" id="comment" placeholder="commentaire">
+        <input type="text" name="comment" id="comment" placeholder="Ecrivez ici">
         <input type="submit" value="Envoyer" />
       </form>
 
-      <article>
+      <article itemscope itemtype="http://schema.org/Organization">
         <h2><span itemprop="performer">Lil Uzi Vert</span> explique pourquoi il a décidé d’arrêter la musique</h2>
         <img src="img/liluzi.jpg" alt="LilUziVert" />
         <p>
@@ -119,7 +119,7 @@
       </article>
       <form>
         <label for="com">Votre commentaire :</label>
-        <input type="text" name="com" id="com" placeholder="commentaire"/>
+        <input type="text" name="com" id="com" placeholder="Ecrivez ici"/>
         <input type="submit" value="Envoyer" />
       </form>
     </main>
